refactor(clean-code): clean the code